@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+21-Nov-2009 Ron Severdia
+^ Modal UI fixes
+# BlueStork CSS cleanup for modals, change px to em
+
 20-Nov-2009 Louis Landry
  + Added JHtmlSliders
  + Added JHtmlTabs
